hotfix:fix swagger docs and add some important comments for prod env
