# docs/swagger.json
@@ -179,6 +179,20 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Audit log page number",
+                        "name": "audit_page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Audit log page size",
+                        "name": "audit_page_size",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -419,9 +433,6 @@
                 },
                 "title": {
                     "type": "string"
-                },
-                "version": {
-                    "type": "integer"
                 }
             }
         },
